# GroundingDINO

./: .dockerignore  .gitignore  Dockerfile  README.md  TRIAL_532_BEST_PARAMS.txt  detection_flow_explained.md  environment.yaml  eval_notes.md  helper  hf_dataset_card.md  optuna_trials_log.csv  optuna_visdrone.csv  requirements.txt  setup.py  solutions_spatial_expressions.md  test_output.txt  text_grounding_at_matching.md  track_results.txt
demo/: debug_dino.py  debug_kitti.py  florence2_adapter.py  florence_demo.ipynb  gradio_app.py  image_editing_with_groundingdino_gligen.ipynb  image_editing_with_groundingdino_stablediffusion.ipynb  inference.py  inference_on_video.py  inference_w_clip.py  inference_w_finetune_dino.py  inference_w_worker.py  ros2_inference.py
docker/: Dockerfile.ros2  QUICKSTART.md  build_ros2.sh  docker-compose.groundingdino.yml  ros2_entrypoint.sh
dump/: spatial_filter_fix.py  test_patch_color.py
eval/: compute_metrics.py  eval.py  eval_carla..md  eval_carla.py  eval_compare_kitti.py  eval_detrac.md  eval_mot17.py  eval_new.py  eval_notes  eval_original.py  eval_referkitti.md  eval_referkitti.py  eval_testing.md  eval_uadetrac.py  eval_uav.md  eval_uavdt.py  eval_visdrone.md  eval_visdrone.py  run_scene_graph_demo.py  scene_graph.py  tune_kitti_optuna.py  tune_referkitti_optuna.py  tune_visdrone_optuna.py  visualize_scene_graph.py  worker.py  worker_clean.py  worker_simple.py
groundingdino/config/: GroundingDINO_SwinB_cfg.py
notebooks/: track_embedding_analysis.ipynb
notebooks_debug/: debug_refmot.ipynb  verify_clip_embeddings_referkitti.ipynb  visualize_referkitti_gt_clean.ipynb
outputs_compare/2025-08-11_1147/baseline/: 0015.txt  0016.txt  0018.txt  (+2 more)
outputs_compare/2025-08-11_1205/: baseline_metrics.csv  clip_fused_metrics.csv  comparison_metrics.csv
ros2_package/: README.md  test_publisher.py  video_saver.py
ros2_package/groundingdino_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_package/groundingdino_ros/config/: default_params.yaml
ros2_package/groundingdino_ros/groundingdino_ros/: __init__.py  groundingdino_node.py  mission_parser.py
ros2_package/groundingdino_ros/launch/: groundingdino.launch.py
ros2_package/groundingdino_ros/msg/: GroundingDINOTrack.msg  GroundingDINOTrackArray.msg
ros2_package/groundingdino_ros/scripts/: groundingdino_node
tracker/: byte_tracker.py  matching.py  tracker_smart_clip.py  tracker_w_clip.py
train/: dataset_meta_kitti.json  run_kitti_2gpu.sh  train.py
train/config/: GroundingDINO_SwinB_cfg.py
train/datasets/: odvg.py
utils/: analyze_clip_stats.py  convert_visdrone2mot.py  debug_data_consistency.ipynb  debugger.ipynb  download_motchallenge.py  kitti_to_coco_val.py  kitti_tracking_to_grounding_glip.py  prepare_uadetrac.py  xml2mot.py
(+22 files in other folders)
